<resources>
    <string name="app_name">ST7BAC_2020E105</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <!--SettingsActivity strings-->
    <string name="textView_volume">Lydniveau</string>
    <string name="textView_radius">Radius</string>
    <string name="safe_button">Gem ændringer</string>

        <string-array name="spinner_items">
            <item>Vælg køretøjtype...</item>
            <item>Ambulance</item>
            <item>Brandbil</item>
            <item>Lægebil</item>
            <item>Andet</item>
        </string-array>


    <!--EmergyncyVehcileLocationActivity strings-->
    <string name="txt_info_start">Tryk på knappen for at starte en udrykning</string>
    <string name="txt_info_stop">Tryk på knappen for at stoppe en udrykning</string>
    <string name="txt_latitude">Latitude</string>
    <string name="txt_longitude">Longitude</string>
    <string name="btn_logout_text">Log ud</string>


    <!--LoginActivity strings-->
    <string name="AuthenticationFailedToast">Authentication failed</string>
    <string name="loginInfoText">Login til beredskabet</string>
    <string name="username">Brugernavn</string>
    <string name="password">Adgangskode</string>
    <string name="loginBtn">Log ind</string>


    <!--MainActivity strings-->
    <string name="startBeware">Start Beware</string>

    <!--MapsActivity strings-->
    <string name="maps">Kort</string>


    <!--Spinner_Layout strings-->
    <string name="chooseVehicleType">Vælg køretøj</string>

    <!--Dropdown menu strings-->
    <string name="settings">Indstillinger</string>
    <string name="login">Beredskabs login</string>
    <string name="logout">Log ud</string>

</resources>