<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SettingsActivity">

    <TextView
        android:id="@+id/textView_volume_settingsactivity"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="15dp"
        android:text="@string/textView_volume"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/seekBar_volume_settingsactivity"
        app:layout_constraintStart_toEndOf="@+id/imageVolume" />

    <TextView
        android:id="@+id/textView_radius_settingsactivity"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="15dp"
        android:text="@string/textView_radius"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/seekBar_radius_settingsactivity"
        app:layout_constraintStart_toEndOf="@+id/imageRadius" />

    <SeekBar
        android:id="@+id/seekBar_volume_settingsactivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:max="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBar_radius_settingsactivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_volume_settingsactivity" />

    <Button
        android:id="@+id/btn_safe_settingsactivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/safe_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_radius_settingsactivity" />

    <ImageView
        android:id="@+id/imageVolume"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/seekBar_volume_settingsactivity"
        app:layout_constraintEnd_toStartOf="@+id/textView_volume_settingsactivity"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/sound_icon" />

    <ImageView
        android:id="@+id/imageRadius"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/seekBar_radius_settingsactivity"
        app:layout_constraintEnd_toStartOf="@+id/textView_radius_settingsactivity"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/radius_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>